Added pie chart and verdict

--- a/src/Assets/CSS/All.css
+++ b/src/Assets/CSS/All.css
@@ -5,6 +5,7 @@
 @import url("./dashboard.css");
 @import url("./side-nav.css");
 @import url("./take-test.css");
+@import url("./new-test-result.css");
 @import url("./modal-blur.css");
 @import url("./small_screens/small_register.css");
 @import url("./small_screens/small_home.css");
