--- a/src/Assets/CSS/colors.css
+++ b/src/Assets/CSS/colors.css
@@ -7,6 +7,7 @@
   --dark-green: #0e5827;
   --light-green: #18a146;
   --red: #e24320;
+  --alt-red: #cb1818;
 }
 .text-gray {
   color: var(--gray);
@@ -34,4 +35,7 @@
 }
 .text-red {
   color: var(--red);
+}
+.bg-alt-red {
+  background: var(--alt-red);
 }
