--- a/src/Assets/CSS/small_screens/small_register.css
+++ b/src/Assets/CSS/small_screens/small_register.css
@@ -9,7 +9,15 @@
 }
 
 @media screen and (max-width: 550px) {
+  .form-logo {
+    margin-top: -400px;
+  }
   div.auth-form {
     width: 360px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -180px;
+    margin-top: -100px;
   }
 }
